# ChessEngine

./: 2547def2-23257-5503.json  5f8dfe11-23360-5009.emb  5f8dfe11-23360-5009.json  CMakeLists.txt  README.md  build.sh  db.sqlite3  eval.py  eval.txt  generate.py  genetic.py  linear_train.py  make_eval.py  make_moveorder_data.py  make_pairs.py  make_train.py  make_train2.py  make_train3.py  make_tune.py  my_module.emb  my_module.pt  nnue-train.py  opt.py  pgns2data.py  piece-square-tables.txt  pystockfish.py  selfplay  selfplay.py  selfplay2.py  selfplay_w.py  sharded_matrix.py  simple_stockfish.py  train.py  train_pairs.py  train_torch.py  uci2san.py  uci_player.py  utils.py  w.weights  weights-square-control.txt  (+3 more)
models/: 2547def2-23257-5503.emb  2547def2-23257-5503.pt  5f8dfe11-23360-5009.pt  b01bb33e-22773-5365.json  b01bb33e-22773-5365.pt  f3ecb654-22524-5881.emb  f3ecb654-22524-5881.json  f3ecb654-22524-5881.pt
protos/: weights.proto
src/: Evaluator.h  Position.cpp  Position.h  analyze.cpp  compute_eval_features.cpp  geometry.cpp  geometry.h  grad.cpp  main.cpp  make_tables.cpp  movegen.h  nnue.cpp  opt.cpp  perft.cpp  piece_maps.cpp  piece_maps.h  search.h  selfplay.cpp  sharded_matrix.h  simple.cpp  slide_lookup.h  tmp.cpp  tmp2.py  train.cpp  uci.cpp  utils.cpp  utils.h  weights.h
src/game/: Evaluator.h  PawnAnalysis.h  Position.cpp  Position.h  Queue.h  SearchResult.h  SpinLock.h  SquareEmbeddings.h  StopThinkingCondition.h  Thinker.h  ThinkerInterface.h  Threats.h  TranspositionTable.h  conditions.h  geometry.cpp  geometry.h  kpvk.h  (+10 more)
tests/: eval_tests.py
(+29 files in other folders)
